# cs-1550-Project-1

./: .gitignore  CMakeLists.txt  README.md  build.tcl  common.tcl  library.c  library.h  main.c  main_single.c  run.tcl  runTests.tcl  square.c  test.tcl
lib/: CMakeLists.txt
lib/include/: color.h  draw.h  library.h  syscalls.h
lib/src/: color.c  draw.c  library.c  syscalls.c
sysCall/: syscalls.c  syscalls.h
sysCall/src/: syscalls.c
sysCall_tests/: CMakeLists.txt
sysCall_tests/BasicTest/: CMakeLists.txt  basic_check.cpp  framebuffer_tests.cpp  mmap_tests.cpp
test/: CMakeLists.txt  framebuffer_tests.cpp
test/sysCallTests/: CMakeLists.txt  color_tests.cpp  draw_tests.cpp  framebuffer_tests.cpp  mmap_tests.cpp  mother.cpp  mother.h
